Use new func registry for temporal arithmetic functions.
- interval and timestamps